Fix image links and add borders and cropping to info images

--- a/styles.css
+++ b/styles.css
@@ -94,8 +94,11 @@ body {
 }
 
 .info img {
-    height: auto;
+    height: 150px;
     width: 150px;
+    border: #3882F6 solid 5px;
+    border-radius: 10px;
+    object-fit: cover;
 }
 
 .info-imgs {
